Fix problem with navigation overlaping content

--- a/src/Assets/scss/components/layout/_navbar.scss
+++ b/src/Assets/scss/components/layout/_navbar.scss
@@ -48,52 +48,57 @@ nav {
 	}
 }
 
-// Tablet / Mobile Navigation
+// Mobile Navigation
 @media(max-width: $tablet){
 	nav {
 		height: 50px !important; // Initial nav + links + borders
 		top: 0;
 		background: #000 !important;
-		.col-12{
-			padding-left: 0;
-			flex-direction: column;
-			.mobile-visible {
-				width: 100%;
-				padding: 10px 50px 10px 30px;
-				display: flex;
-				justify-content: space-between;
-				@media(max-width: $phone-landscape){
-					padding: 10px 20px;
-				}
-				.open-slide{
-					display: block;
-					margin-top: 5px;
-					&:hover,
-					&:focus {
-						color: $white;
-						cursor: pointer;
+		.container {
+			height: auto !important;
+			.col-12{
+				padding-left: 0;
+				flex-direction: column;
+				padding: 0px 20px 0px 10px !important;
+				.mobile-visible {
+					width: 100%;
+					display: flex;
+					justify-content: space-between;
+					padding: 10px 20px 0 10px;
+					@media(max-width: $phone-landscape){
+						padding: 10px 20px;
 					}
-				}
-			}
-			.links {
-				margin-right: 0;
-				opacity: 0;
-				transition: .2s ease-in-out;
-				li {
-					display: block;
-					width: 100vw;
-					margin-right: 0;
-					background: $dark-grey;
-					margin: 0;
-					border: 1px solid darken($medium-grey, 20%);
-					border-bottom: 0;
-					&:last-child{
-						border-bottom: 1px solid darken($medium-grey, 20%);
-					}
-					a {
+					.open-slide{
 						display: block;
-						line-height: 50px;
-						text-transform: initial;
+						margin-top: 5px;
+						&:hover,
+						&:focus {
+							color: $white;
+							cursor: pointer;
+						}
+					}
+				}
+				.links {
+					margin-right: 0;
+					z-index: -1;
+					opacity: 0;
+					transition: .2s ease-in-out;
+					li {
+						display: block;
+						width: 100vw;
+						margin-right: 0;
+						background: $dark-grey;
+						margin: 0;
+						border: 1px solid darken($medium-grey, 20%);
+						border-bottom: 0;
+						&:last-child{
+							border-bottom: 1px solid darken($medium-grey, 20%);
+						}
+						a {
+							display: block;
+							line-height: 50px;
+							text-transform: initial;
+						}
 					}
 				}
 			}
@@ -103,9 +108,10 @@ nav {
 
 .mobile-nav-open{
 	@media(max-width: $tablet){
-		height: calc(50px + 300px + 7px) !important; // Initial nav + y: block;
+		height: calc(50px + 300px + 7px) !important; // Initial nav + Links Height + Borders
 	}
 }
 .mobile-links-visible {
+	z-index: 3 !important;
 	opacity: 1 !important;
 }
